# gunny-rs

./: .gitignore  Cargo.toml  README.md
examples/blog/posts/: post1.md
examples/blog/templates/: home.html  post.html
examples/blog/views/: home.js  posts.js
gunny/: Cargo.toml
gunny-cli/: Cargo.toml
gunny-cli/src/: main.rs
gunny/src/: collection.rs  config.rs  context.rs  data.rs  datetime.rs  error.rs  fs.rs  hash.rs  js.rs  lib.rs  project.rs  source.rs  template.rs  transform.rs  value.rs  view.rs
gunny/tests/: integration.rs
gunnyscript/: Cargo.toml  README.md  grammar.abnf
gunnyscript/src/: encoding.rs  error.rs  lib.rs  number.rs  parser.rs  prelude.rs  value.rs
gunnyscript/tests/fixtures/: complex.gns
